# Codex_20260109

./: .gitignore  README.md  pyproject.toml
one_channel/: __init__.py  config.py  io.py  kinetics.py  post.py  solver.py  transport.py
one_channel/examples/: __init__.py  example_config.yaml  run_transient.py
tests/: test_integration.py  test_newton.py  test_transfer.py  test_tridiagonal.py
