[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "one-channel"
version = "0.1.0"
description = "1D one-channel transient catalytic converter solver"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pyyaml",
  "pandas",
]

[project.optional-dependencies]
plot = ["matplotlib"]

test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["one_channel*"]

[tool.pytest.ini_options]
addopts = "-ra"
